# airviz-platform

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
backend/data/: tile-coordinates.csv
backend/data/borough-coordinates/: borough-coordinates.json
backend/data/tile-coordinates/: tile-coordinates-with-boroughid.csv  tile-coordinates.csv
backend/lambda/: tsconfig.json
backend/lambda/aggregateRegionalMetrics/: index.js  index.ts  package-lock.json  package.json
backend/lambda/aggregateRegionalMetricsProvisionalLambda/: index.ts
backend/lambda/createDbSchema/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  package-lock.json  package.json  tsconfig.json
backend/lambda/createDbSchemaProvisionalLambda/: index.ts
backend/lambda/fetchAllRegions/: index.js  index.ts  package.json  (+1 more)
backend/setup/: attach-boroughs-to-tile-coordinates.py  commands.coffee  generate-coordinates.sh  pyproject.toml
frontend/airviz/: README.md  jsconfig.json  observablehq.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
infrastructure/: cdk.context.json  package-lock.json  package.json
infrastructure/lib/: api-compute-stack-provisional-lambda.ts  api-compute-stack-provisioned-lambda.ts  api-compute-stack.ts  auth-stack.ts  data-storage-stack.ts  monitoring-stack.ts
tests/: automate_k6_runs.sh  collect_test_results_from_logs.ts  collect_test_results_from_logs_warm_start_latency.ts  k6_1_serverless_lambda_api_gateway.js  k6_2_provisioned_lambda_api_gateway.js  k6_3_serverless_lambda_no_api_gateway.js  k6_tests_serverless_api_gateway.js
(+114 files in other folders)
