[tool.poetry]
name = "setup"
version = "0.1.0"
description = ""
authors = ["Lily Chau <chauyeeki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^1.1.1"
pandas = "^2.3.2"
shapely = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
